--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Install dependenciespip 
+      - name: Install dependencies
         run: npm install
 
       - name: Run tests
