--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: Testing
 
 on:
   push:
@@ -14,15 +14,17 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-python@v2
         with:
-          node-version: '14'
+          python-version: '3.12'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: npm test
+        run: pytest tests/
 
       - name: Check test results and report
         if: ${{ failure() }}
